reg_sim.cache/compile_simlib/questa/common_rpc_v1/.cxl.cpp.sm.log
QuestaSim-64 vmap 2022.4 Lib Mapping Utility 2022.10 Oct 18 2022
vmap common_rpc_v1 /home/azafeer/Desktop/test/reg_sim/reg_sim.cache/compile_simlib/questa/common_rpc_v1 
Modifying modelsim.ini
In file included from /cad/xilinx/Vivado/2023.2/data/systemc/simlibs/common_rpc/common_rpc_v1/src/rpc_messages.pb.cpp:4:0:
/cad/xilinx/Vivado/2023.2/data/systemc/simlibs/common_rpc/common_rpc_v1/include/rpc_messages.pb.h:17:2: error: #error This file was generated by an older version of protoc which is
 #error This file was generated by an older version of protoc which is
  ^~~~~
/cad/xilinx/Vivado/2023.2/data/systemc/simlibs/common_rpc/common_rpc_v1/include/rpc_messages.pb.h:18:2: error: #error incompatible with your Protocol Buffer headers. Please
 #error incompatible with your Protocol Buffer headers. Please
  ^~~~~
/cad/xilinx/Vivado/2023.2/data/systemc/simlibs/common_rpc/common_rpc_v1/include/rpc_messages.pb.h:19:2: error: #error regenerate this file with a newer version of protoc.
 #error regenerate this file with a newer version of protoc.
  ^~~~~
/cad/xilinx/Vivado/2023.2/data/systemc/simlibs/common_rpc/common_rpc_v1/src/rpc_messages.pb.cpp:11:10: fatal error: google/protobuf/wire_format_lite_inl.h: No such file or directory
 #include <google/protobuf/wire_format_lite_inl.h>
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
/cad/xilinx/Vivado/2023.2/data/systemc/simlibs/common_rpc/common_rpc_v1/src/xaxi_profiler_instmgr.cpp: In function ‘void messenger(xaxi_profiler_instmgr*)’:
/cad/xilinx/Vivado/2023.2/data/systemc/simlibs/common_rpc/common_rpc_v1/src/xaxi_profiler_instmgr.cpp:73:44: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   if (((clock() - l_time) / CLOCKS_PER_SEC > inst->freqencyOfDebugMsgs)
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
